# flight-mind

./: .gitignore  ADR-001-flight-mind-architecture.md  ADR-002-exclude-tier3.md  COWORK_HANDOFF.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  run_daemon.ps1  setup_and_train.ps1  setup_and_train.sh
docs/: DAY10_REAL_BACKTEST_REPORT.md  DAY2_BACKTEST_DIAGNOSIS.md  DAY3_TIER2_REPORT.md  DAY4_TIER4_REPORT.md  DAY5_INTEGRATED_BACKTEST_REPORT.md  DAY7_EXECUTION_ENGINE_REPORT.md  DAY8_RISK_MANAGER_REPORT.md  DAY9_DAEMON_REPORT.md  TRAINING_GUIDE.md
flight_mind/: config.py
flight_mind/daemon/: paper_worker.py
flight_mind/execution/: engine.py
flight_mind/fusion/: layer.py
flight_mind/notify/: telegram.py
flight_mind/risk/: audit.py  manager.py  position_tracker.py
flight_mind/tier1_rule/: engine.py
flight_mind/tier2_pattern/: dataset.py  encoder.py  inference.py  model.py  train.py
flight_mind/tier4_regime/: dataset.py  inference.py  labeler.py  model.py  train.py
flight_mind/utils/: backtest_integrated.py  backtest_tier1.py  db.py  features.py  mock_signals.py  real_model_signals.py
flight_mind/vault/: manager.py
scripts/: backtest_real_vs_mock.py  demo_day1.py  demo_paper_trading.py  diagnose_env.py  download_binance_data.py  risk_status.py  run_full_training.py  smoke_test_day2.py  smoke_test_day3.py
tests/: test_daemon.py  test_execution.py  test_fusion.py  test_integrated_backtest.py  test_real_model_adapter.py  test_risk_manager.py  test_tier1.py  test_tier2.py  test_tier4.py
